# multiprocess_with_communication

./: README.md  pyproject.toml
multiprocess_sanic/bp1/: run.py  send.py
multiprocess_sanic/bp2/: process.py  run.py
multiprocess_sanic/bp3/: process.py  run.py  server.py
multiprocess_sanic/bp4/: run.py
multiprocess_sanic/bp5/: process.py  run.py  server.py  test_event.py
tests/: test_mail_python.py
